<resources>
    <string name="app_name">PowerApp</string>
    <string name="ok_button">OK</string>
    <string name="zero_number">0</string>

    <!-- general phrases -->
    <!-- height measurements -->
    <string name="height_cm">ס"מ</string>
    <string name="weight_kg">ק"ג</string>

    <!-- NUMBERS-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>

    <!-- Strings related to login -->
    <string name="phone_number_screen_literal_description">על מנת להיכנס, יש להזין מס\' נייד</string>
    <string name="code_verification_qestion">מה הקוד שקיבלת?</string>
    <string name="short_introduction_text">היכרות קצרה</string>
    <string name="personal_details_facebook_details_text">קח את הפרטים שלי מהפייסבוק</string>
    <string name="continue_text">המשך</string>
    <string name="personal_details_agreement_to_terms_of_use">אני מסכים לתנאי השימוש</string>
    <string name="back_text">חזרה</string>
    <string name="skip_text">דלג</string>
    <string name="health_form_text">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית ושבעגט ליבם סולגק. בראיט ולחת צורק מונחף, בגורמי מגמש. תרבנך וסתעד לכנו סתשם השמה - לתכי מורגם בורק? לתיג ישבעס.</string>
    <string name="yes_button">כן</string>
    <string name="no_button">לא</string>

    <!-- PersonalDetailsActivity screen -->
    <string name="personal_details_questionnaire_question_age">הגיל שלי...</string>
    <string name="personal_details_questionnaire_question_name">קוראים לי...</string>

    <!-- HealthFormActivity screen -->
    <string name="health_form_text_title">הצהרת בריאות</string>
    <string name="health_form_first_question_question">האם הרופא שלך אמר לך שאתה סובל ממחלת לב?</string>
    <string name="health_form_second_question_main_question">האם אתה חש כאבים בחזה...</string>
    <string name="health_form_choose_an_option">אנא סמן את תשובתך בכל אחת מהאפשרויות המפורטות מטה</string>
    <string name="health_form_second_question_rest_question">בזמן מנוחה?</string>
    <string name="health_form_second_question_activity_question">במהלך פעילויות שגרה ביום-יום?</string>
    <string name="health_form_second_question_exercise_question">בזמן שאתה מבצע פעילות גופנית?</string>
    <string name="health_form_in_the_last_year_question">האם במהלך השנה החולפת...</string>
    <string name="health_form_short_of_breath_question">סבלת מקוצר נשימה או ציפצופים?</string>
    <string name="health_form_fourth_question_main_question">האם אחד מבני משםפחתך מדרגת קרבה ראשונה נפטר...</string>
    <string name="health_form_fourth_question_heart_disease_option">ממחלת לב?</string>
    <string name="health_form_fourth_question_sudden_death_option">ממוות פתאומי בגיל מוקדם?</string>
    <string name="health_form_fifth_question">האם הרופא שלך אמר לך ב-5 השנים האחרונות לבצע פעילות גופנית רק תחת השגחה רפואית?</string>
    <string name="health_form_sixth_question">האם הינך סובל ממחלה קבועה כרונית, שאינה נזכרת בשאלות לעיל ועשויה למנוע או להגביל אותך בביצוע פעילות גופנית?</string>

    <!-- MyGoalsActivity screen-->
    <string name="my_goals_build_muscles_goal">בניית שרירים</string>
    <string name="my_Goals_weight_loss_goal">ירידה במשקל</string>
    <string name="my_goals_peaceful_goal">שמירה על אורח\n חיים בריא ושליו</string>
    <string name="my_goals_stamina_goal">סיבולת לב ריאה</string>
    <string name="my_goals_general_goal">כללי</string>
    <string name="my_goals_military_goal">הכשרה לכושר קרבי</string>
    <string name="my_goals_title_explanation_text">המטרה שלי היא...</string>

    <!-- ChosenTrainerActivity screen -->
    <string name="trainer_choosing_explanation_text">בחירת מאמן תואם למטרה שלך</string>
    <string name="trainer_choosing_auto_completion_for_trainer_experience">שנות ניסיון</string>
    <string name="schedule_session">לקביעת אימון חינם</string>
    <string name="chosen_trainer_title_text">בחרת במאמן</string>
    <string name="chosen_trainer_both_male_and_female_trainer">מאמן גברים ונשים</string>

    <!-- main_top_bar component -->
    <string name="main_top_bar_current_level_text">רמה נוכחית</string>
    <string name="main_top_bar_coins_layout_text">מטבעות מאמץ</string>
    <string name="main_top_bar_goals_layout_text">מטרה גופנית</string>

    <!-- menu layout screen -->
    <string name="menu_layout_title_text">הגדרות</string>
    <string name="menu_layout_account_text">חשבון</string>
    <string name="menu_layout_support_text">תמיכה</string>
    <string name="menu_layout_about_text">אודות</string>
    <string name="menu_layout_my_gym_text">המכון שלי</string>
    <string name="menu_layout_logout_text">התנתקות</string>
    
    <!-- personal profile screen -->
    <string name="personal_profile_layout_followers_text">עוקבים</string>
    <string name="personal_profile_layout_current_bmi_text">BMI נוכחי</string>
    <string name="personal_profile_layout_initial_bmi_text">BMI התחלתי</string>
    <string name="personal_profile_layout_height_text">גובה</string>
    <string name="personal_profile_layout_initial_weight_text">משקל התחלתי</string>
    
    <!-- personal profile goal layout -->
    <string name="personal_profile_goal_layout_goal_text">יעד</string>
    <string name="personal_profile_goal_layout_enum_weight">משקל נוכחי</string>
    <string name="personal_profile_goal_layout_enum_fat_percentage">אחוז שומן נוכחי</string>
    <string name="personal_profile_goal_layout_enum_weekly_training_average">ממוצע אימונים שבועי</string>
    <string name="personal_profile_goal_layout_enum_trainings_out_of_workout_plan">אימונים מהתוכנית שבוצעו</string>

    <!-- newsfeed & co. screen -->
    <string name="newsfeed_post_comments_section_add_comment_text">הוספת תגובה...</string>
    
    <!-- workout fragment screen -->
    <string name="workout_layout_function_buttons_leader_list_text">רשימת \nמובילים</string>
    <string name="workout_layout_function_buttons_challenges_text">אתגרים</string>
    <string name="workout_layout_function_buttons_training_session_history_text">היסטוריית \nאימונים</string>
    <string name="workout_layout_function_buttons_class_explorer_text">סייר \nהחוגים</string>
    <string name="workout_layout_start_new_training_session_button_Text">התחל אימון חדש</string>

    <!-- class explorer screen -->
    <string name="traker_class_explorer_traker_class_enum_aerobic_text">אירובי</string>
    <string name="traker_class_explorer_traker_class_enum_body_building_text">פיתוח הגוף</string>
    <string name="traker_class_explorer_traker_class_enum_stress_relief_text">הפגת לחצים \nוגמישות</string>
    <string name="class_explorer_layout_title_text">סייר החוגים</string>
    <string name="class_explorer_layout_category_question">מה מתחשק לך?</string>

    <!-- calendar layout fragment screen -->
    <string name="calendar_layout_fitness_consultant_appointment_text">קבע פגישה \nעם יועץ כושר</string>
    <string name="calendar_layout_dietician_appointement_text">קבע פגישה \nעם תזונאי</string>

</resources>
