<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <com.traker.traker.components.TrakerButton
        android:id="@+id/menu_layout_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/menu_layout_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_layout_title_text"
        android:textColor="@color/colorWhite" />

    <TrakerLinearLayout
        android:id="@+id/menu_layout_settings_account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_account_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_account_icon"/>

        <TextView
            android:id="@+id/menu_layout_settings_account_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_account_text"
            android:textColor="@color/colorWhite" />
    </TrakerLinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout_settings_settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_settings_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_settings_icon"
            />

        <TextView
            android:id="@+id/menu_layout_settings_settings_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_title_text"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout_settings_support_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_support_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_support_icon"/>

        <TextView
            android:id="@+id/menu_layout_settings_support_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_support_text"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout_settings_about_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_about_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_about_icon"/>

        <TextView
            android:id="@+id/menu_layout_settings_about_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_about_text"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout_settings_my_gym_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_my_gym_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_my_gym_icon"/>

        <TextView
            android:id="@+id/menu_layout_settings_my_gym_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_my_gym_text"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout_settings_logout_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_layout_settings_logout_layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_layout_logout_icon"/>

        <TextView
            android:id="@+id/menu_layout_settings_logout_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_layout_logout_text"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>