<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.traker.traker.activities.login_flow.PersonalDetailsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/personal_details_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorTraker"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personal_details_short_introduction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/short_introduction_text"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_details_screen_title" />

    <ImageView
        android:id="@+id/personal_details_personal_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_details_short_introduction_text"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/login_details_blank_picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/personal_details_questionnaire"
        app:layout_constraintEnd_toEndOf="@+id/personal_details_questionnaire"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/personal_details_questionnaire"
        app:layout_constraintTop_toBottomOf="@+id/personal_details_personal_image">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/black"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_details_personal_image"
            app:srcCompat="@drawable/login_details_facebook_logo" />
        <TextView
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/personal_details_facebook_details_text"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_details_questionnaire"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/personal_details_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/personal_details_questionnaire_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.02"
            android:hint="@string/personal_details_questionnaire_question_name"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/personal_details_questionnaire_age"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/personal_details_questionnaire_question_age"
            android:inputType="number"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textDirection="locale" />

        <Spinner
            android:id="@+id/personal_details_questionnaire_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tooltipText="מין">

        </Spinner>
    </LinearLayout>

    <CheckBox
        android:id="@+id/personal_details_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layoutDirection="locale"
        android:text="@string/personal_details_agreement_to_terms_of_use"
        android:textDirection="inherit"
        app:layout_constraintBottom_toTopOf="@+id/personal_details_continue_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.traker.traker.components.TrakerButton
        android:id="@+id/personal_details_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorTraker"
        android:text="@string/continue_text"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
